--- a/contact.css
+++ b/contact.css
@@ -50,6 +50,7 @@
     font-size: 20px;
 }
 
+
 .formsubdiv{
     display: flex;
     gap: 20px;
@@ -71,3 +72,33 @@
     width: 50%;
     /* border: 2px yellow solid; */
 }
+
+select{
+    width: 100%;
+    height: 40px;
+    border: none;
+    font-family : "Afacad Flux", serif;
+}
+
+.ta{
+    width: 100%;
+    border: none;
+    font-family : "Afacad Flux", serif;
+    height: 30vh;
+}
+
+.req{
+    display: flex;
+}
+
+.sendbtn{
+    margin-top: 30px;
+    border: none;
+    border-radius: 10px;
+    width: 100%;
+    background-color: #395353;
+    color: white;
+    height: 50px;
+    margin-bottom: 100px;
+}
+
