--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
     border-radius: 18px;
     background-image: url(./files/bg.jpg);
     background-position: -10%;
+    background-size: 100%;
     width: 100%;
     height: 100%;
     background-size: cover;
