--- a/style.css
+++ b/style.css
@@ -246,54 +246,64 @@ a{
     height: 55vh;
   }
 
-
-  .himg.one{
+  .himg {
+    position: relative;
     display: flex;
     flex-direction: column;
-    justify-content: end;
-    
+    justify-content: flex-end;
     border-radius: 10px;
+    height: 100%;
+    width: 50%;
+    background-size: cover;
+    background-position: center;
+    transition: width 0.5s;
+    padding-bottom: 40px;
+    overflow: hidden;
+}
+
+.himg::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    transition: background-color 0.5s, backdrop-filter 0.5s;
+    z-index: 1; /* Make sure this is below the content */
+    border-radius: 10px;
+}
+
+.himg .himgtxt, .himg .himgp {
+    position: relative; /* Ensure this is above the pseudo-element */
+    z-index: 2; /* Higher z-index to appear above the overlay */
+}
+
+.himg.one {
     background-image: url(./files/himg1.jpg);
-    height: 100%;
-    width: 50%;
-    background-size: cover;
-    transition: 0.5s;
-    padding-bottom: 40px;
-  }
-  .himg.two{
+}
 
-    display: flex;
-    flex-direction: column;
-    justify-content: end;
-    border-radius: 10px;
+.himg.two {
     background-image: url(./files/himg2.jpg);
-    height: 100%;
-    width: 50%;
-    background-size: cover;
-    transition: 0.5s;
-    padding-bottom: 40px;
-  }
+}
 
-  @keyframes colorchange {
-    0%{
-        background-image:  url(./files/himg2.jpg);
-    }
-    100%{
-        background-image: none;
-    }
-    
-  }
-
-  .himg.one:hover{
+.himg.one:hover {
     width: 60%;
-    background-image: none;
+}
+
+.himg.one:hover::after {
     background-color: #907c78;
-  }
-  .himg.two:hover{
+    backdrop-filter: opacity(0.8); /* Adjust the opacity as needed */
+}
+
+.himg.two:hover {
     width: 60%;
-    background-image: none;
+}
+
+.himg.two:hover::after {
     background-color: #3f6f7d;
-  }
+}
+
 
   .himgtxt{
     margin: 0px;
