--- a/style.css
+++ b/style.css
@@ -463,10 +463,15 @@ a{
 }
 
 .mapdiv{
-    /* border: 2px green solid; */
     width: 50%;
     border-radius: 20px;
     overflow: hidden;
+}
+
+.mapdiv iframe {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .lp{
